--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#F63366"
-backgroundColor="#EBD3D3"
-secondaryBackgroundColor="#F0F2F6"
+backgroundColor="#dfecf5"
+secondaryBackgroundColor="#dfecf5"
 textColor="#262730"
 font="sans serif"
