Updates - bkgd color

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#F63366"
-backgroundColor="#dfecf5"
+backgroundColor="#bee0f7"
 secondaryBackgroundColor="#dfecf5"
 textColor="#262730"
 font="sans serif"
