Updates - text color

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,5 +2,5 @@
 primaryColor="#F63366"
 backgroundColor="#694c6b"
 secondaryBackgroundColor="#dfecf5"
-textColor="#262730"
+textColor="#dfe0ed"
 font="sans serif"
