--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#F63366"
 backgroundColor="#694c6b"
-secondaryBackgroundColor="#dfecf5"
+secondaryBackgroundColor="#f7e6b7"
 textColor="#f0f0f5"
 font="sans serif"
