Change bkgd color

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#F63366"
+primaryColor="#3845b5"
 backgroundColor="#694c6b"
 secondaryBackgroundColor="#f5bf69"
 textColor="#f0f0f5"
