--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#3845b5"
+primaryColor="#F63366"
 backgroundColor="#694c6b"
-secondaryBackgroundColor="#f5bf69"
+secondaryBackgroundColor="#b194b3"
 textColor="#f0f0f5"
 font="sans serif"
