--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#F63366"
-backgroundColor="#694c6b"
+backgroundColor="#f0f0f5"
 secondaryBackgroundColor="#b194b3"
-textColor="#f0f0f5"
+textColor="#694c6b"
 font="sans serif"
