--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#F63366"
 backgroundColor="#f0e6f5"
-secondaryBackgroundColor="#c8aac8"
+secondaryBackgroundColor="#b6a3b8"
 textColor="#694c6b"
 font="sans serif"
